# now-proto

./: .gitignore  Cargo.toml  Directory.Build.props  NowProto.sln  README.md  cliff.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nuget-publish.yml  release-crates.yml
crates/now-proto-pdu/: Cargo.toml
crates/now-proto-testsuite/: Cargo.toml
doc/: NOW-spec.md
docs/: NOW-spec.md
dotnet/: .editorconfig  dotnet.sln
dotnet/Devolutions.NowClient.Cli/: Devolutions.NowClient.Cli.csproj  Program.cs  README.md
rust/now-proto-fuzzing/: Cargo.toml
rust/now-proto-fuzzing/src/generators/: mod.rs
rust/now-proto-fuzzing/src/oracles/: mod.rs
rust/now-proto-pdu/: CHANGELOG.md  Cargo.toml  README.md
rust/now-proto-pdu/src/: lib.rs  message.rs
rust/now-proto-pdu/src/channel/: capset.rs  close.rs
rust/now-proto-pdu/src/core/: buffer.rs  guid.rs  header.rs  mod.rs  number.rs  string.rs
rust/now-proto-pdu/src/exec/: abort.rs  batch.rs  mod.rs  process.rs  pwsh.rs  result.rs  run.rs  shell.rs  win_ps.rs
rust/now-proto-pdu/src/rdm/: app_action.rs  app_notify.rs  app_start.rs  capabilities.rs  mod.rs  session_action.rs  session_notify.rs  session_start.rs
rust/now-proto-pdu/src/session/: mod.rs  msg_box_rsp.rs  set_kbd_layout.rs  window_rec_event.rs  window_rec_start.rs  window_rec_stop.rs
rust/now-proto-pdu/src/system/: mod.rs
rust/now-proto-testsuite/: Cargo.toml
rust/now-proto-testsuite/src/proto/: mod.rs
rust/now-proto-testsuite/tests/proto/: channel.rs  exec.rs  mod.rs  rdm.rs  regression.rs  session.rs
xtask/: Cargo.toml
xtask/src/: bin_version.rs  (+7 more)
(+224 files in other folders)
