[package]
name = "now-proto-fuzzing"
version = "0.0.0"
edition = "2021"
description = "Provides test case generators and oracles for use with NOW protocol fuzzing"
publish = false

[lib]
doctest = false
test = false

[dependencies]
# arbitrary = { version = "1", features = ["derive"] }
# now-proto-pdu.workspace = true

[lints]
workspace = true

