[package]
name = "now-proto-pdu"
version = "0.4.2"
readme = "README.md"
description = "NOW protocol PDU encoding and decoding"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[lib]
doctest = false
test = false

[lints]
workspace = true

[dependencies]
bitflags = "2"
ironrdp-core = { version = "0.1", features = ["alloc"] }
ironrdp-error = { version = "0.1", features = ["alloc"] }
uuid = { version = "1", default-features = false }

[features]
std = ["ironrdp-core/std", "ironrdp-error/std"]
default = []
